--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture 6</title>
+    <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
-    <p>Lecture 6</p>
+    <p>Paragraph</p>
+    <p>Paragraph</p>
+    <p>Paragraph</p>
+    <p>Paragraph</p>
+    <a>Anchor Tag</a>
 </body>
 </html>
