learned how to use classes and ID's
You can use divs as containers and manipulate specific parts of them with classes and ID's

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
-    <p>Paragraph</p>
-    <p>Paragraph</p>
-    <p>Paragraph</p>
-    <p>Paragraph</p>
-    <a>Anchor Tag</a>
+    <div id = "navigation"> 
+        <a class = "navButton" href = "index.html">1</a>
+        <a class = "navButton" href = "index.html">2</a>
+        <a class = "navButton" href = "index.html">3</a>
+        <a class = "navButton" href = "index.html">4</a>
+        <a class = "navButton" href = "index.html">5</a>
+    </div>
+    <!-- Div tag -->
+    <div id = "heroImage">
+        <p class = "hero-text-color hero-text-size"> This is some text</p>
+    </div>
+    <!--  ID properties - only one element named on page-->
+    <div id = "blog-post" class>
+        <h2>Title of Article</h2>
+        <p>Date 4-21-22</p>
+        <p>Blog</p>
+    </div>
+    <div>
+        <h2>Title of Article</h2>
+        <p>Date 4-21-22</p>
+        <p>Blog</p>
+    </div>
+    <!-- Classes and IDs -->
+
 </body>
 </html>
