--- a/index.html
+++ b/index.html
@@ -20,15 +20,35 @@
         <p class = "hero-text-color hero-text-size"> This is some text</p>
     </div>
     <!--  ID properties - only one element named on page-->
-    <div id = "blog-post" class>
-        <h2>Title of Article</h2>
-        <p>Date 4-21-22</p>
-        <p>Blog</p>
-    </div>
-    <div>
-        <h2>Title of Article</h2>
-        <p>Date 4-21-22</p>
-        <p>Blog</p>
+    <div id="blog-posts">
+        <div class = "blog-post" class>
+            <h2>
+                <span class = "span-title">Title of Article</span>
+            </h2>
+            <p><em>Date 4-21-22</em></p>
+            <p>
+                Blog
+
+            </p>
+            <p>
+            This is going to be my content of one of my blog posts
+            </p>
+        </div>
+        <div class = "blog-post" class>
+            <h2>
+                Title of Article
+            </h2>
+            <p><em>Date 4-21-22</em></p>
+            <p>
+                Blog
+    
+            </p>
+            <p>
+            This is going to be my content of one of my blog posts
+            </p>
+            <a href="newArticle.html">Here is my new article</a>
+        </div>
+
     </div>
     <!-- Classes and IDs -->
 
