navigation bar for new article

--- a/newArticle.html
+++ b/newArticle.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New article</title>
+    <link href="style/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id = "navigation"> 
+        <a class = "navButton" href = "index.html">1</a>
+        <a class = "navButton" href = "index.html">2</a>
+        <a class = "navButton" href = "index.html">3</a>
+        <a class = "navButton" href = "index.html">4</a>
+        <a class = "navButton" href = "index.html">5</a>
+    </div>
 </body>
 </html>
